Fix #3696 [Mobile] Experiment launch / expiration date displayed on mobile view.

--- a/frontend/src/app/containers/ExperimentPage/index.scss
+++ b/frontend/src/app/containers/ExperimentPage/index.scss
@@ -273,7 +273,9 @@
   padding-top: $grid-unit * .5;
 
   .details-sections {
-    @include hide-on-small;
+    .stats-section, .contributors-section, .measurements {
+      @include hide-on-small
+    }
   }
 }
 
